--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,11 @@
 on:
-  workflow_dispatch:
+  merge_group:
+  pull_request:
   push:
-    branches: main
+    branches:
+      - main
+    tags:
+      - "*"
 
 name: Quarto Publish
 
